# goflow2-python-kafka

./: README.md  clickhouse-init.sql  docker-compose.yaml  extra.sql  main.py  pyproject.toml
alloy/: config.alloy
app/: aaa.py  main.py  pyproject.toml
flow/: flow_pb2.py
fluent-bit/: fluent-bit-parser.conf  fluent-bit.conf
grafana/provisioning/datasources/: default.yaml
loki/: loki-config.yaml
prometheus/: prometheus.yml
protobuf-compiler/: Dockerfile  README.md
src/flow/: flow_pb2.pyi
