[project]
name = "goflow2-python-kafka"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "confluent-kafka>=2.8.0",
    "protobuf>=5.29.3",
    "python-json-logger>=3.2.1",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.9.3",
    "types-confluent-kafka>=1.3.1",
]
