[project]
name = "goflow2-python-kafka"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "confluent-kafka>=2.8.0",
    "graypy>=2.1.0",
    "loguru>=0.7.3",
    "prometheus-client>=0.21.1",
    "protobuf>=5.29.3",
    "pytricia>=1.0.2",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.9.3",
    "types-confluent-kafka>=1.3.1",
]
